--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About · Advanced DevOps Webserver</title>
+  <title>About · Rupali's  DevOps Webserver</title>
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="assets/logo.svg" />
 </head>
