--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <section class="hero">
     <div class="container">
-      <h1>Advanced DevOps Webserver</h1>
+      <h1> i love rupali </h1>
       <p>Static site + Nginx + Docker — built on Jenkins, stored on GitHub.</p>
       <div class="cta-row">
         <a class="btn" href="about.html">Explore Features</a>
